Added plotly grid colors for visibility on dark background and changed index.html background to black.

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <body style="background-color:#181A1B"></body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Increase in Tropical Storms in Relation to Climate Change</h1>
@@ -17,7 +18,7 @@
 
     <h2>Ocean Temps</h2>
     <!-- <img src= C:\Users\jplum\Desktop\Project2WebsiteMockup\Carbon.png alt="Featured Mars Image" /> -->
-    <div id="plot"></div>
+    <div id="bar"></div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
       elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
       Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
