--- a/static/index.html
+++ b/static/index.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Impact of Climate Change on Hurricanes</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <body style="background-color:#181A1B"></body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Increase in Tropical Storms in Relation to Climate Change</h1>
