--- a/index.html
+++ b/index.html
@@ -17,32 +17,35 @@
     </div>
 
     <h2>Ocean Temps</h2>
-    <div id="bar"></div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
+      <div id="bar"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
       elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
       Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
       Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
       Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p>
 
     <h2>Carbon in the Atmosphere</h2>    
-    <div id="scatter"></div>
-    <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
+      <div id="scatter"></div>
+      <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
       measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
       Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
       since then [Thoning, 1989]. https://www.esrl.noaa.gov/gmd/ccgg/trends/</p>
     
     <h2>Hurricane Landfall</h2>
-    <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
-    <canvas id="myChart"></canvas>
+      <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
+      <canvas id="myChart"></canvas>
     </div> 
     <!-- <canvas style="width: 512px; height: 256px"></canvas> -->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
       elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
       Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
       Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
       Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p>
 
-    </div>      
+    <!-- The div that holds our map -->
+    <div id="map"></div>
+
+    <!-- </div> -->      
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
