updating index.html, adding additional html and updating style.css

--- a/static/HTML/oceanTemps.html
+++ b/static/HTML/oceanTemps.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Storm Evolution</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/Group-Project-2/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <!-- <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/Group-Project-2/static/index.html">Home <span class="sr-only">(current)</span></a>
         </li> -->
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -49,10 +49,8 @@
       </div>
       </nav>
     <div class="jumbotron text-center">
-      <h1>Evolution of Storms over Time</h1>
+      <h1>Ocean Temps</h1>
     </div>
-
-    <h2>Super Chart</h2>
     <div id="bar"></div>
     <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
@@ -72,9 +70,9 @@
       elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
       Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
       Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
-      Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p>
+      Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p> -->
 
-    </div>       --> -->
+    </div>       -->
 
     <div class="row">
       <div class="col-md-12">
@@ -97,7 +95,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script type="text/javascript" src="plot.js"></script>
+  <script type="text/javascript" src="/Group-Project-2/static/plot.js"></script>
 </body>
 
 </html>
