--- a/static/HTML/Carbon.html
+++ b/static/HTML/Carbon.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg  navbar-custom" style="background-color: #181A1B;">
       <a class="navbar-brand" href="/Group-Project-2/static/index.html">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -76,7 +76,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
+        <p>Citations:</p>
         <p>
           The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
           measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
@@ -92,7 +92,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script type="text/javascript" src="/Group-Project-2/static/plot.js"></script>
+  <script type="text/javascript" src="js/plot.js"></script>
 </body>
 
 </html>
