--- a/static/HTML/hurricanes.html
+++ b/static/HTML/hurricanes.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg  navbar-custom" style="background-color: #181A1B;">
       <a class="navbar-brand" href="/Group-Project-2/static/index.html">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
