--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg  navbar-custom" style="background-color: #181A1B;">
       <a class="navbar-brand" href="/Group-Project-2/static/index.html">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,10 @@
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
+        <p>Citations:</p>
+        <p>
+          photo credit: https://www.nasa.gov/multimedia/imagegallery/image_feature_87.html
+        </p>
         <p>
           We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
 
