--- a/static/hurricanes/race.html
+++ b/static/hurricanes/race.html
@@ -8,15 +8,20 @@
   <title>The Impact of Climate Change on Hurricanes</title>
 
   <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="./js/motion.js"></script>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/larsac07/Motion-Highcharts-Plugin/motion.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/styleRace.css">
 
 <body>
 
-    <div id="container"></div>
+    <div id="windrace"></div>
 
-<script type="text/javascript" src="./js/race.js"></script>
+    <!-- <script src="../data/maxWind.csv"></script> -->
+    <script type="text/javascript" src="./js/race.js"></script>
+
 </body>
 
 </html>
