--- a/static/index.html
+++ b/static/index.html
@@ -55,14 +55,14 @@
 <figure class="highcharts-figure">
   <div id="container"></div>
   <p class="highcharts-description">
-    Basic line chart showing trends in a dataset. This chart includes the
+    <!-- Basic line chart showing trends in a dataset. This chart includes the
     <code>series-label</code> module, which adds a label to each line for
-    enhanced readability.
+    enhanced readability. -->
   </p>
 </figure>
 
-    <h2>Ocean Temps</h2>
-    <div id="bar"></div>
+    <!-- <h2>Ocean Temps</h2>
+    <div id="bar"></div> -->
     <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
     <!-- <h2>Carbon in the Atmosphere</h2>    
