--- a/static/HTML/oceanTemps.html
+++ b/static/HTML/oceanTemps.html
@@ -95,7 +95,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script type="text/javascript" src="/Group-Project-2/static/plot.js"></script>
+  <script type="text/javascript" src="../plot.js"></script>
 </body>
 
 </html>
