--- a/static/hurricanes/race.html
+++ b/static/hurricanes/race.html
@@ -13,14 +13,15 @@
   <script src="https://cdn.jsdelivr.net/gh/larsac07/Motion-Highcharts-Plugin/motion.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="./css/styleRace.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
+
 
 <body>
 
     <div id="windrace"></div>
 
     <!-- <script src="../data/maxWind.csv"></script> -->
-    <script type="text/javascript" src="./js/race.js"></script>
+    <script type="text/javascript" src="./js/hurricanes.js"></script>
 
 </body>
 
